@@ -84,7 +84,8 @@ const CURLOPT_DNS_USE_GLOBAL_CACHE = UNKNOWN;
 const CURLOPT_EGDSOCKET = UNKNOWN;
 /**
  * @var int
- * @cvalue CURLOPT_ENCODING
+ * @cvalue CURLOPT_ACCEPT_ENCODING
+ * @alias CURLOPT_ACCEPT_ENCODING
  */
 const CURLOPT_ENCODING = UNKNOWN;
 /**
@@ -1291,9 +1292,15 @@ const CURLINFO_RESPONSE_CODE = UNKNOWN;
 const CURLINFO_PROXYAUTH_AVAIL = UNKNOWN;
 /**
  * @var int
- * @cvalue CURLOPT_FTP_RESPONSE_TIMEOUT
+ * @cvalue CURLOPT_SERVER_RESPONSE_TIMEOUT
+ * @alias CURLOPT_SERVER_RESPONSE_TIMEOUT
  */
 const CURLOPT_FTP_RESPONSE_TIMEOUT = UNKNOWN;
+/**
+ * @var int
+ * @cvalue CURLOPT_SERVER_RESPONSE_TIMEOUT
+ */
+const CURLOPT_SERVER_RESPONSE_TIMEOUT = UNKNOWN;
 /**
  * @var int
  * @cvalue CURLOPT_IPRESOLVE
