@@ -41,6 +41,10 @@ PHP                                                                        NEWS
     EAI_SYSTEM not found). (nielsdos)
   . Implemented asymmetric visibility for properties. (ilutov)
 
+- Curl:
+  . Added CURLOPT_SERVER_RESPONSE_TIMEOUT, which was formerly known as
+    CURLOPT_FTP_RESPONSE_TIMEOUT. (Ayesh Karunaratne)
+
 - Date:
   . Fixed bug GH-13773 (DatePeriod not taking into account microseconds for end
     date). (Mark Bennewitz, Derick)
